# NewsNeuron

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.prod.yml  docker-compose.yml  flashcard_schema.sql  index.html  main.py  nginx.conf  package-lock.json  pyproject.toml  requirements.txt  test.ipynb
agents/: agent.py
api/: flashcard_routes.py  routes.py
core/: config.py  models.py
frontend/: vite.config.js
frontend/src/components/flashcards/: FlashCard.vue
frontend/src/components/headlines/: TopHeadlineCard.vue
frontend/src/components/layout/: AppNavigation.vue  NavLink.vue
frontend/src/components/ui/: ArticleSummaryModal.vue
frontend/src/services/: api.js
frontend/src/stores/: flashcards.js
frontend/src/views/: ChatView.vue  FlashcardsView.vue  HomeView.vue  TimelineView.vue
retrieval/: embeddings.py  fetch_news.py  knowledge_graph.py  news_retriever.py  vector_store.py
services/: flashcard_service.py  spaced_repetition.py
tests/: test.ipynb
