[project]
name = "newsneuron"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.10.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.0.0",
    "pinecone>=7.3.0",
    "ipykernel>=6.30.0",
    "neo4j>=5.28.2",
    "spacy>=3.8.7",
    "pip>=25.2",
    "fastapi[standard]>=0.116.1",
    "psycopg2-binary>=2.9.10",
    "langgraph>=0.6.6",
    "langsmith>=0.4.21",
    "langchain-openai>=0.3.32",
    "langchain>=0.3.27",
]

[tool.uv.sources]
# en-core-web-lg = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl" }
